--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /.vs/TestWeb
+/packages
+/TestWeb/.vs/TestWeb
+/TestWeb/bin
+/TestWeb/obj/Debug
