--- a/TestWeb/Dockerfile
+++ b/TestWeb/Dockerfile
@@ -4,5 +4,5 @@
 FROM mcr.microsoft.com/dotnet/framework/aspnet:4.8-windowsservercore-ltsc2019
 ARG source
 WORKDIR /inetpub/wwwroot
-COPY ${source:- C:\BuildOutput\TestWeb} .
+COPY source:- C:\BuildOutput\*.* .
 EXPOSE 80
