--- a/TestWeb/Dockerfile
+++ b/TestWeb/Dockerfile
@@ -2,7 +2,7 @@
 #For more information, please see https://aka.ms/containercompat
 
 FROM mcr.microsoft.com/dotnet/framework/aspnet:4.8-windowsservercore-ltsc2019
-ARG source
+--ARG source
 WORKDIR /inetpub/wwwroot
-COPY ${source:-../} .
+COPY ./*.* .
 EXPOSE 80
