--- a/TestWeb/Dockerfile
+++ b/TestWeb/Dockerfile
@@ -3,5 +3,5 @@
 
 FROM mcr.microsoft.com/dotnet/framework/aspnet:4.8-windowsservercore-ltsc2019
 WORKDIR /inetpub/wwwroot
-COPY * .
+COPY *
 EXPOSE 80
