--- a/TestWeb/TestWeb.csproj
+++ b/TestWeb/TestWeb.csproj
@@ -193,6 +193,10 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <Content Include=".dockerignore">
+      <DependentUpon>Dockerfile</DependentUpon>
+    </Content>
+    <Content Include="Dockerfile" />
     <None Include="Properties\PublishProfiles\TestWeb.pubxml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
